--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "realiste",
   "version": "0.1.0",
   "private": true,
+  "homepage": "kazningm.github.io/realiste-test",
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
@@ -14,6 +15,7 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "gh-pages": "^4.0.0",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
